# mood-journal-cli

./: Cargo.toml  README.md
src/: app.rs  journal.rs  main.rs  prompts.rs
