[package]
name = "mood-journal-cli"
version = "0.1.0"
edition = "2021"
description = "A tiny CLI journal with mood tracking, tags, and stats"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
thiserror = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
